# crypto-order-book

./: .gitignore  Cargo.toml  README.md
parquet_schemas/: binance_futures_book_ticks_schema.json  binance_spot_trades_schema.json
src/: README.md  binance_api.rs  diff_file.rs  errors.rs  files.rs  lib.rs  main.rs  msgpack_lines.rs  order_book.rs
src/binance/: errors.rs  json_parser.rs  mod.rs  parse_util.rs  spot_old.rs  stream.rs
src/binance/futures/: mod.rs  symbol.rs  ticks.rs
src/binance/spot/: mod.rs  order_book.rs  order_book_diff.rs  snapshot.rs  symbol.rs  trade.rs  url_util.rs
src/binance_api/: mod.rs
