[package]
name = "exchange-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-channel = "0.3.27"
futures-util = "0.3.27"
reqwest = { version="0.11.14", features=["json"] }
rust_decimal = { version="1.29.0", features=["serde-with-str"] }
rust_decimal_macros = "1.29.0"
serde = { version="1.0.156", features=["derive"] }
serde_json = "1.0.94"
thiserror = "1.0.39"
tokio = { version="1.26.0", features=["full"]}
tokio-tungstenite = { version="0.18.0", features=["native-tls"] }
url = "2.3.1"
uuid = { version="1.3.0", features=["v4", "serde"] }
